<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".LoginActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_login"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/purple"
                android:gravity="center_horizontal" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/email"
                android:inputType="textEmailAddress"

                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:hint="@string/hint_email"
                android:padding="8dp"
                android:textColor="@color/purple"
                android:layout_marginTop="40dp"
                android:drawableStart="@drawable/ic_baseline_person_24" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"

                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:hint="@string/hint_password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_baseline_lock_24" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/loginButton"
                android:text="@string/btn_login"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                app:cornerRadius = "20dp"
                android:onClick="login"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/link_register"
        android:textSize="14sp"
        android:id="@+id/signupText"
        android:textColor="@color/purple"
        android:layout_marginBottom="20dp"
        android:onClick="signup"/>

</LinearLayout>